--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -132,6 +132,7 @@ function MM_swapImage() { //v3.0
 											2018 at 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+                                            <!--
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 											<h3>Buy tickets here! </h3>
@@ -161,6 +162,14 @@ function MM_swapImage() { //v3.0
 											<span style="letter-spacing: normal">
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 											<font size="4">Tickets are non-Refundable</font></span></span></p>
+                                            -->
+                                            <h1 align="center" class="silents">
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            Sold Out!<br>
+                                            </h1>
 											</TD>
 											</TR>
 											<TR>
@@ -176,7 +185,8 @@ function MM_swapImage() { //v3.0
 <img id="silentsrightthird" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/The_Toll_Gate_%281920%29_-_Ad.jpg" />
 <h2 align="center" class="silents"><br><br>Featuring <em>William S. Hart</em> starring in his own production, 
 with a story co-written by his sister Mary Ellen Hart, also starring his favorite pinto 
-pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>&rdquo;</h2><br><br>
+pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>.&rdquo;</h2><br><br>
+<h2 align="center" class="silents">Catch the scene where Bill &amp; Fritz nearly died during the production!</h2><br><br>
 <h2 align="center" class="silents">As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
 </h2>
 </div>
@@ -190,26 +200,19 @@ pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>&rdquo;</h2><br><br>
 												<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 										<span class="Apple-style-span">
 										<span style="letter-spacing: normal">
-										<font face="Copperplate Gothic Bold" size="6" color="#770000">
 <h2 class="silents">
-This year we're proud to showcase
+This year we're proud to showcase the western/bluegrass sounds of
 </h2>
 <h1 class="silents" align="center">
-<a target="_blank" href="http://www.grateful-dudes.net/">
 The Grateful Dudes Cowboy Band
-</a>
                                         <img class="centeredImage" align="center" src="silents/silents2018/TheGratefulDudes.jpg"/>
 </h1>
-												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-<h2 class="silents"> From our own town of Newhall, CA!
-<br>&ldquo;<b>WILL PICK FOR FOOD&rdquo;<br>
-The longest continuing bluegrass band in Southern California 
-for over 35+ years.
+<h2 class="silents">From our own town of Newhall, CA!
 </h2>
 </span>
                                         </p><br>
                                         <B class="EVNTC">But that's not all!...
-                                        </font></span></span></p>
+                                        </span></span></p>
 														</td>
 													</tr>
 													<tr>
@@ -273,51 +276,42 @@ for over 35+ years.
 												Newhall, CA</font></p>
 												</span>
 												<span class="Apple-style-span" style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
-												<p align="center" style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">From L.A. area, take I-5 
+                                                <p class="silents">
+												From L.A. area, take I-5 
 												North, Golden State Freeway, to 
 												I-14 North, Antelope Valley 
-												Freeway &nbsp;</font></span></p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">Exit 
-												at Newhall Avenue (the old San 
-												Fernando Road) West, which is 
-												the first off-ramp.</font></span></p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">Turn 
-												right (North) on Newhall Avenue (the old 
-												San Fernando Road). </font>
-												</span></p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">
+												Freeway
+                                                </p><p class="silents">
+												Exit 
+												at Newhall Avenue (formerly San 
+												Fernando Road), which is 
+												the first off-ramp.
+                                                </p><p class="silents">
+												Turn right (North) on Newhall Avenue (the old 
+												San Fernando Road).
+                                                </p><p class="silents">
 												Travel about 1½ miles and cross 
-												the railroad tracks.</font></span></p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">Just 
-												after crossing the railroad 
+												the railroad tracks.
+                                                </p><p class="silents">
+												Just after crossing the railroad 
 												tracks, the Park is on your 
-												left. </font></span></p>
-												<p style="margin-top: 0; margin-bottom: 6px" align="left">
-												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">Once 
+												left.
+                                                </p><p class="silents">
+												Once 
 												you have come through the main 
-												gate, park anywhere in the lower 
+												gate, park anywhere in the 
+                                                lower 
 												lot. Do not go up the hill in 
-												your vehicle.</font></span></p>
-												</span>
+												your vehicle.
+												</p></span>
 												<span class="Apple-style-span" style="border-collapse: separate; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
-												Proceed to Will Call at 
-												<a href="../Hart_Hall/hart_hall.html">Hart Hall</a>
-												to check in and pick up your ticket.
+												Proceed to 
+												<a href="../Hart_Hall/hart_hall.html">
+                                                Hart Hall</a> front entrance
+												to check in.
 												</font></span></p>
 												</span>
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
